Ran the Data Preprocessing - House Price Prediction

--- a/Data Preprocessing -  House Price Prediction.ipynb
+++ b/Data Preprocessing -  House Price Prediction.ipynb
@@ -932,7 +932,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x21d410eef48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x27d2d39f948>"
       ]
      },
      "execution_count": 7,
@@ -974,95 +974,95 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row0_col0 {\n",
+       "    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row0_col0 {\n",
        "            background-color:  #800080;\n",
        "            color:  #f1f1f1;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row1_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row1_col0 {\n",
        "            background-color:  #b45eb4;\n",
        "            color:  #000000;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row2_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row2_col0 {\n",
        "            background-color:  #cc89cc;\n",
        "            color:  #000000;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row3_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row3_col0 {\n",
        "            background-color:  #dba5db;\n",
        "            color:  #000000;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row4_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row4_col0 {\n",
        "            background-color:  #dda8dd;\n",
        "            color:  #000000;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row5_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row5_col0 {\n",
        "            background-color:  #dfacdf;\n",
        "            color:  #000000;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row6_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row6_col0 {\n",
        "            background-color:  #e2b0e2;\n",
        "            color:  #000000;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row7_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row7_col0 {\n",
        "            background-color:  #f2cef2;\n",
        "            color:  #000000;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row8_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row8_col0 {\n",
        "            background-color:  #f6d4f6;\n",
        "            color:  #000000;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row9_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row9_col0 {\n",
        "            background-color:  #f9dbf9;\n",
        "            color:  #000000;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row10_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row10_col0 {\n",
        "            background-color:  #fbddfb;\n",
        "            color:  #000000;\n",
-       "        }    #T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row11_col0 {\n",
+       "        }    #T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row11_col0 {\n",
        "            background-color:  #ffe5ff;\n",
        "            color:  #000000;\n",
-       "        }</style><table id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >saleprice</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >saleprice</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row0\" class=\"row_heading level0 row0\" >saleprice</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row0_col0\" class=\"data row0 col0\" >1.000000</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row0\" class=\"row_heading level0 row0\" >saleprice</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row0_col0\" class=\"data row0 col0\" >1.000000</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row1\" class=\"row_heading level0 row1\" >overallqual</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row1_col0\" class=\"data row1 col0\" >0.799262</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row1\" class=\"row_heading level0 row1\" >overallqual</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row1_col0\" class=\"data row1 col0\" >0.799262</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row2\" class=\"row_heading level0 row2\" >grlivarea</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row2_col0\" class=\"data row2 col0\" >0.706780</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row2\" class=\"row_heading level0 row2\" >grlivarea</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row2_col0\" class=\"data row2 col0\" >0.706780</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row3\" class=\"row_heading level0 row3\" >garagecars</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row3_col0\" class=\"data row3 col0\" >0.647877</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row3\" class=\"row_heading level0 row3\" >garagecars</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row3_col0\" class=\"data row3 col0\" >0.647877</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row4\" class=\"row_heading level0 row4\" >garagearea</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row4_col0\" class=\"data row4 col0\" >0.640401</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row4\" class=\"row_heading level0 row4\" >garagearea</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row4_col0\" class=\"data row4 col0\" >0.640401</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row5\" class=\"row_heading level0 row5\" >totalbsmtsf</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row5_col0\" class=\"data row5 col0\" >0.632280</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row5\" class=\"row_heading level0 row5\" >totalbsmtsf</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row5_col0\" class=\"data row5 col0\" >0.632280</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row6\" class=\"row_heading level0 row6\" >1stflrsf</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row6_col0\" class=\"data row6 col0\" >0.621676</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row6\" class=\"row_heading level0 row6\" >1stflrsf</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row6_col0\" class=\"data row6 col0\" >0.621676</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row7\" class=\"row_heading level0 row7\" >yearbuilt</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row7_col0\" class=\"data row7 col0\" >0.558426</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row7\" class=\"row_heading level0 row7\" >yearbuilt</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row7_col0\" class=\"data row7 col0\" >0.558426</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row8\" class=\"row_heading level0 row8\" >fullbath</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row8_col0\" class=\"data row8 col0\" >0.545604</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row8\" class=\"row_heading level0 row8\" >fullbath</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row8_col0\" class=\"data row8 col0\" >0.545604</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row9\" class=\"row_heading level0 row9\" >yearremodadd</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row9_col0\" class=\"data row9 col0\" >0.532974</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row9\" class=\"row_heading level0 row9\" >yearremodadd</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row9_col0\" class=\"data row9 col0\" >0.532974</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row10\" class=\"row_heading level0 row10\" >garageyrblt</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row10_col0\" class=\"data row10 col0\" >0.526965</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row10\" class=\"row_heading level0 row10\" >garageyrblt</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row10_col0\" class=\"data row10 col0\" >0.526965</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894level0_row11\" class=\"row_heading level0 row11\" >masvnrarea</th>\n",
-       "                        <td id=\"T_56f31d64_2c3c_11eb_aef3_4c3488dd7894row11_col0\" class=\"data row11 col0\" >0.508285</td>\n",
+       "                        <th id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894level0_row11\" class=\"row_heading level0 row11\" >masvnrarea</th>\n",
+       "                        <td id=\"T_4da1e974_2c3f_11eb_97d0_4c3488dd7894row11_col0\" class=\"data row11 col0\" >0.508285</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x21d4230b288>"
+       "<pandas.io.formats.style.Styler at 0x27d2dc5c848>"
       ]
      },
      "execution_count": 8,
@@ -3047,7 +3047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3083,19 +3083,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "PermissionError",
-     "evalue": "[WinError 32] The process cannot access the file because it is being used by another process: 'Resources/cleaned_dataset.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUniqueViolation\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-33-e898af14bc69>\u001b[0m in \u001b[0;36mcopy_from_file\u001b[1;34m(conn, df, table, filename)\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m         \u001b[0mcursor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy_from\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtable\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\",\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m         \u001b[0mconn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUniqueViolation\u001b[0m: duplicate key value violates unique constraint \"pk_ames\"\nDETAIL:  Key (pid)=(526301100) already exists.\nCONTEXT:  COPY ames, line 1\n",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-34-61d7bbbe82f3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#-----------------------------------------------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mconn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcursor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# connect to the database\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mcopy_from_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mames_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'ames'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Resources/cleaned_dataset.csv'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# copy the dataframe to SQL\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-33-e898af14bc69>\u001b[0m in \u001b[0;36mcopy_from_file\u001b[1;34m(conn, df, table, filename)\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mconn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mException\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpsycopg2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDatabaseError\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtmp_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Error: %s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[0mconn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrollback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [WinError 32] The process cannot access the file because it is being used by another process: 'Resources/cleaned_dataset.csv'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "copy_from_file() done\n"
      ]
     }
    ],
@@ -3109,7 +3100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3188,7 +3179,7 @@
        "4           5  527105010 -93.638933  42.060899"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3202,7 +3193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3215,7 +3206,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3226,7 +3217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3356,7 +3347,7 @@
        "[2932 rows x 4 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3369,7 +3360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3384,7 +3375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3394,7 +3385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3754,7 +3745,7 @@
        "[2919 rows x 70 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3766,7 +3757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3896,7 +3887,7 @@
        "[2919 rows x 4 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3908,7 +3899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3929,7 +3920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3939,7 +3930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
