Updated Data Preprocessing python file with comments

--- a/Data Preprocessing -  House Price Prediction.ipynb
+++ b/Data Preprocessing -  House Price Prediction.ipynb
@@ -3018,6 +3018,7 @@
     }
    ],
    "source": [
+    "# Check dataframe to make sure everything looks ok\n",
     "ames_df"
    ]
   },
@@ -3029,7 +3030,7 @@
    },
    "outputs": [],
    "source": [
-    "# Writing to database \n",
+    "# Connection string for the AWS PostgreSQL database\n",
     "def connect():\n",
     "    \n",
     "    # Set up a connection to the postgres server.\n",
@@ -3051,6 +3052,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create function to write to database\n",
     "import os\n",
     "def copy_from_file(conn, df, table, filename):\n",
     "    \"\"\"\n",
@@ -3091,9 +3093,9 @@
     }
    ],
    "source": [
-    "#-----------------------------------------------\n",
-    "# Main code\n",
-    "#-----------------------------------------------\n",
+    "#------------------------------------------------------------------------------------------\n",
+    "# Call copy_from_file function to write to ames table\n",
+    "#------------------------------------------------------------------------------------------\n",
     "conn, cursor = connect() # connect to the database\n",
     "copy_from_file(conn, ames_df, 'ames', 'Resources/cleaned_dataset.csv') # copy the dataframe to SQL"
    ]
@@ -3212,6 +3214,7 @@
     }
    ],
    "source": [
+    "#Check datatypes for ames_geo_df\n",
     "ames_geo_df.dtypes"
    ]
   },
@@ -3379,7 +3382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the data type of pid for ames_df\n",
+    "# Change the data type of pid for ames_df to compare pid in both dataframes\n",
     "ames_df['pid'] = ames_df['pid'].astype(np.str)"
    ]
   },
@@ -3751,6 +3754,7 @@
     }
    ],
    "source": [
+    "# Merge both dataframes\n",
     "common = ames_df.merge(ames_geo_df, on=[\"pid\"])\n",
     "common"
    ]
@@ -3893,6 +3897,7 @@
     }
    ],
    "source": [
+    "# Get only the matched pid from both dataframes\n",
     "ames_geo_df = ames_geo_df[ames_geo_df.pid.isin(common.pid)]\n",
     "ames_geo_df"
    ]
@@ -3911,9 +3916,9 @@
     }
    ],
    "source": [
-    "#-----------------------------------------------\n",
-    "# Main code\n",
-    "#-----------------------------------------------\n",
+    "#------------------------------------------------------------------------------------------\n",
+    "# Call copy_from_file function to write to ames_ego table\n",
+    "#------------------------------------------------------------------------------------------\n",
     "conn, cursor = connect() # connect to the database\n",
     "copy_from_file(conn, ames_geo_df, 'ames_geo', 'Resources/cleaned_geo_dataset.csv') # copy the dataframe to SQL"
    ]
@@ -3934,16 +3939,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Export csv file with header for website and tableau\n",
     "ames_df.to_csv('Resources/cleaned_ames_dataset.cvs', index=False)\n",
     "ames_geo_df.to_csv('Resources/cleaned_ames_geo_dataset.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
