reran the model and updated the modelrun times and r square

--- a/Data Preprocessing -  House Price Prediction.ipynb
+++ b/Data Preprocessing -  House Price Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "id": "jzgJzUV0GFw8"
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "[5 rows x 83 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -603,7 +603,7 @@
        "[2930 rows x 83 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -664,7 +664,7 @@
        "Length: 82, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        "[5 rows x 82 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -932,10 +932,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1dca90486c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2ad68ebccc8>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -974,98 +974,98 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow0_col0 {\n",
+       "    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow0_col0 {\n",
        "            background-color:  #800080;\n",
        "            color:  #f1f1f1;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow1_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow1_col0 {\n",
        "            background-color:  #b45eb4;\n",
        "            color:  #000000;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow2_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow2_col0 {\n",
        "            background-color:  #cc89cc;\n",
        "            color:  #000000;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow3_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow3_col0 {\n",
        "            background-color:  #dba5db;\n",
        "            color:  #000000;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow4_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow4_col0 {\n",
        "            background-color:  #dda8dd;\n",
        "            color:  #000000;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow5_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow5_col0 {\n",
        "            background-color:  #dfacdf;\n",
        "            color:  #000000;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow6_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow6_col0 {\n",
        "            background-color:  #e2b0e2;\n",
        "            color:  #000000;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow7_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow7_col0 {\n",
        "            background-color:  #f2cef2;\n",
        "            color:  #000000;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow8_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow8_col0 {\n",
        "            background-color:  #f6d4f6;\n",
        "            color:  #000000;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow9_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow9_col0 {\n",
        "            background-color:  #f9dbf9;\n",
        "            color:  #000000;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow10_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow10_col0 {\n",
        "            background-color:  #fbddfb;\n",
        "            color:  #000000;\n",
-       "        }    #T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow11_col0 {\n",
+       "        }    #T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow11_col0 {\n",
        "            background-color:  #ffe5ff;\n",
        "            color:  #000000;\n",
-       "        }</style><table id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3e\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >saleprice</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3e\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >saleprice</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row0\" class=\"row_heading level0 row0\" >saleprice</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow0_col0\" class=\"data row0 col0\" >1.000000</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row0\" class=\"row_heading level0 row0\" >saleprice</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow0_col0\" class=\"data row0 col0\" >1.000000</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row1\" class=\"row_heading level0 row1\" >overallqual</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow1_col0\" class=\"data row1 col0\" >0.799262</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row1\" class=\"row_heading level0 row1\" >overallqual</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow1_col0\" class=\"data row1 col0\" >0.799262</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row2\" class=\"row_heading level0 row2\" >grlivarea</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow2_col0\" class=\"data row2 col0\" >0.706780</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row2\" class=\"row_heading level0 row2\" >grlivarea</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow2_col0\" class=\"data row2 col0\" >0.706780</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row3\" class=\"row_heading level0 row3\" >garagecars</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow3_col0\" class=\"data row3 col0\" >0.647877</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row3\" class=\"row_heading level0 row3\" >garagecars</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow3_col0\" class=\"data row3 col0\" >0.647877</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row4\" class=\"row_heading level0 row4\" >garagearea</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow4_col0\" class=\"data row4 col0\" >0.640401</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row4\" class=\"row_heading level0 row4\" >garagearea</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow4_col0\" class=\"data row4 col0\" >0.640401</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row5\" class=\"row_heading level0 row5\" >totalbsmtsf</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow5_col0\" class=\"data row5 col0\" >0.632280</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row5\" class=\"row_heading level0 row5\" >totalbsmtsf</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow5_col0\" class=\"data row5 col0\" >0.632280</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row6\" class=\"row_heading level0 row6\" >1stflrsf</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow6_col0\" class=\"data row6 col0\" >0.621676</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row6\" class=\"row_heading level0 row6\" >1stflrsf</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow6_col0\" class=\"data row6 col0\" >0.621676</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row7\" class=\"row_heading level0 row7\" >yearbuilt</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow7_col0\" class=\"data row7 col0\" >0.558426</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row7\" class=\"row_heading level0 row7\" >yearbuilt</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow7_col0\" class=\"data row7 col0\" >0.558426</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row8\" class=\"row_heading level0 row8\" >fullbath</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow8_col0\" class=\"data row8 col0\" >0.545604</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row8\" class=\"row_heading level0 row8\" >fullbath</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow8_col0\" class=\"data row8 col0\" >0.545604</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row9\" class=\"row_heading level0 row9\" >yearremodadd</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow9_col0\" class=\"data row9 col0\" >0.532974</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row9\" class=\"row_heading level0 row9\" >yearremodadd</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow9_col0\" class=\"data row9 col0\" >0.532974</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row10\" class=\"row_heading level0 row10\" >garageyrblt</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow10_col0\" class=\"data row10 col0\" >0.526965</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row10\" class=\"row_heading level0 row10\" >garageyrblt</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow10_col0\" class=\"data row10 col0\" >0.526965</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3elevel0_row11\" class=\"row_heading level0 row11\" >masvnrarea</th>\n",
-       "                        <td id=\"T_33667bfa_2cf5_11eb_b3ba_0028f8688f3erow11_col0\" class=\"data row11 col0\" >0.508285</td>\n",
+       "                        <th id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3elevel0_row11\" class=\"row_heading level0 row11\" >masvnrarea</th>\n",
+       "                        <td id=\"T_ce0de7b4_2cff_11eb_a23e_0028f8688f3erow11_col0\" class=\"data row11 col0\" >0.508285</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1dca9885108>"
+       "<pandas.io.formats.style.Styler at 0x2ad694517c8>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1213,7 +1213,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
        "Name: mszoning, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,20 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Just keep the residential properties\n",
-    "ames_df.drop(ames_df[ames_df['mszoning'] =='A (agr)'].index, inplace = True)\n",
-    "ames_df.drop(ames_df[ames_df['mszoning'] =='C (all)'].index, inplace = True)\n",
-    "ames_df.drop(ames_df[ames_df['mszoning'] =='I (all)'].index, inplace = True)\n",
-    "ames_df.drop(ames_df[ames_df['mszoning'] =='FV'].index, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1298,12 +1285,18 @@
        "Name: mszoning, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Just keep the residential properties\n",
+    "a = ['C (all)','I (all)', 'FV', 'A (agr)']\n",
+    "for i in a:\n",
+    "    ames_df.drop(ames_df[ames_df['mszoning'] == i].index, inplace = True)\n",
+    "    \n",
+    "# ames_df.drop(ames_df[ames_df['mszoning'] =='FV'].index, inplace = True)\n",
     "ames_df['mszoning'].value_counts()"
    ]
   },
@@ -3452,7 +3445,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
